--- a/system/modules/multicolumnwizard/html/css/multicolumnwizard.css
+++ b/system/modules/multicolumnwizard/html/css/multicolumnwizard.css
@@ -1,6 +1,6 @@
 @charset utf-8;
-.multicolumnwizard { margin-top:10px; }
-.multicolumnwizard h3 { display:none; }
+.multicolumnwizard { margin-top:5px; }
+.multicolumnwizard h3 { padding:0; overflow:hidden; }
 .multicolumnwizard .tl_textarea { width:auto; height:auto; }
 .multicolumnwizard .tl_select, .multicolumnwizard .tl_mselect { width:auto; }
 .multicolumnwizard .tl_checkbox_single_container { margin-top:0; }
