--- a/system/modules/multicolumnwizard/html/css/multicolumnwizard_src.css
+++ b/system/modules/multicolumnwizard/html/css/multicolumnwizard_src.css
@@ -1,45 +1,55 @@
 .multicolumnwizard {
-	margin-top:5px;
+    margin-top:5px;
 }
 
 .multicolumnwizard h3 {
-	padding:0;
-	overflow:hidden;
+    padding:0;
+    overflow:hidden;
 }
 
 .multicolumnwizard .tl_textarea {
-	width:auto;
-	height:auto;
+    width:auto;
+    height:auto;
 }
 
 .multicolumnwizard .tl_select, .multicolumnwizard .tl_mselect {
-	width:auto;
+    width:auto;
 }
 
 .multicolumnwizard .tl_checkbox_single_container {
-	margin-top:0;
-}
-
-.multicolumnwizard .hidelabel h3, 
-.multicolumnwizard .hidelabel label {
-	display:none;
-}
-
-.multicolumnwizard label {
-	font-weight:normal;
-	float:left;
-}
-
-.multicolumnwizard input.tl_checkbox {
-	float:left;
+    margin-top:0;
 }
 
 .multicolumnwizard td.col_last {
-	padding-right:0;
+    padding-right:0;
+}
+
+.multicolumnwizard .hidelabel h3 {
+    display:none;
 }
 
 .multicolumnwizard .w50 {
-	float:none;
-	width:auto;
-	height:auto;
+    float:none;
+    width:auto;
+    height:auto;
 }
+
+.multicolumnwizard .hidelabel .tl_checkbox_single_container label {
+    display:none;
+}
+
+/* 
+.multicolumnwizard label {
+    font-weight:normal;
+    float:left;
+}
+
+.multicolumnwizard input.tl_checkbox {
+    float:left;
+}
+
+.multicolumnwizard .tl_checkbox_container label {
+    display:block;
+    float:none;
+} 
+*/
