Hotfix drag and drop based on branch drag-drop

--- a/system/modules/multicolumnwizard/html/css/multicolumnwizard_src.css
+++ b/system/modules/multicolumnwizard/html/css/multicolumnwizard_src.css
@@ -48,6 +48,11 @@
     padding-right: 0;
 }
 
+.multicolumnwizard a[rel="move"] {
+    cursor: move;
+}
+
+
 .multicolumnwizard .w50 {
     float: none;
     width: auto;
